// Cash Flow and Accounts management schema

Table cash_flows {
  id uuid [pk, default: `gen_random_uuid()`]
  transaction_date timestamp [default: `now()`]       // Waktu terjadinya mutasi
  reference_type varchar(50) [not null]               // 'ORDER_PAYMENT', 'EXPENSE', 'REFUND', 'CAPITAL', 'ADJUSTMENT', 'FUND_TRANSFER'
  reference_id uuid [null]                            // ID referensi (bisa null jika penyesuaian manual tanpa tabel detail)
  type varchar(10) [not null]                         // 'DEBIT' (Masuk), 'CREDIT' (Keluar)
  amount decimal(15,2) [not null, default: 0]
  payment_method varchar(50) [not null]               // 'cash', 'transfer', 'qris'
  description text [null]                             // Keterangan otomatis atau manual
  customer_name varchar(255) [null]                   // Nama customer jika terkait transaksi penjualan/refund
  invoice_number varchar(100) [null]                  // Nomor invoice jika terkait order/refund
  cashier_id uuid [not null]                          // User/Kasir yang melakukan transaksi
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [null]

  Note: 'Buku kas utama (General Ledger) mencatat arus kas masuk & keluar'
}

Table cash_accounts {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(50) [unique, not null]                 // 'cash', 'transfer', 'qris', dll
  balance decimal(15,2) [not null, default: 0]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Note: 'Master data laci kasir dan digital account untuk menyimpan running balance'
}

Table fund_transfers {
  id uuid [pk, default: `gen_random_uuid()`]
  transfer_date timestamp [default: `now()`]
  from_account_id uuid [not null]
  to_account_id uuid [not null]
  amount decimal(15,2) [not null]
  notes text [null]
  cashier_id uuid [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [null]

  Note: 'Mencatat pemindahan dana antar cash_accounts'
}

// Relationships
Ref: cash_flows.cashier_id > users.id [delete: restrict]
Ref: fund_transfers.from_account_id > cash_accounts.id [delete: restrict]
Ref: fund_transfers.to_account_id > cash_accounts.id [delete: restrict]
Ref: fund_transfers.cashier_id > users.id [delete: restrict]
